complete the online payment and use zarinpal payment gateway

--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,10 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+SMS_USERNAME=''
+SMS_PASSWORD=''
+SMS_OTP_FROM=''
+
+ZARIN_PAL_MERCHANT_ID=''
