--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.5",
         "morilog/jalali": "^3.2",
+        "nagy/laravel-rating": "^1.0",
         "nwidart/laravel-modules": "^9.0",
         "saeedpooyanfar/zarinpal": "^5.0"
     },
